--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,7 +63,7 @@ remote = [ "cached-path", "dirs", "lazy_static" ]
 features = ["doc-only"]
 
 [dependencies]
-rust_tokenizers = { path = "../rust-tokenizers/main" }
+rust_tokenizers = "*"
 tch = "~0.8.0"
 serde_json = "1.0.82"
 serde = { version = "1.0.140", features = ["derive"] }
