--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,7 +63,7 @@ remote = [ "cached-path", "dirs", "lazy_static" ]
 features = ["doc-only"]
 
 [dependencies]
-rust_tokenizers = "*"
+rust_tokenizers = { git = "https://github.com/npatsakula/rust-tokenizers.git", branch = "nllb_tokenizer" }
 tch = "~0.8.0"
 serde_json = "1.0.82"
 serde = { version = "1.0.140", features = ["derive"] }
@@ -75,6 +75,7 @@ half = "2.1.0"
 cached-path = { version = "0.5.3", optional = true }
 dirs = { version = "4.0.0", optional = true }
 lazy_static = { version = "1.4.0", optional = true }
+enum_dispatch = "0.3.8"
 
 [dev-dependencies]
 anyhow = "1.0.58"
